@@ -99,12 +99,14 @@ class Attacher {
 		Date lastModified = (Date) m.get("lastModified");
 		Boolean isImg = (Boolean) m.get("isimg");
 		Boolean writable = (Boolean) m.get("writable");
+		String file = (String) m.get("file");
+		Integer mtime = (Integer) m.get("mtime");
 		Integer perms = (Integer) m.get("perm");
 		if ( perms == null ){
 			//Because it has been renamed in API v8
 			perms = (Integer) m.get("perms");
 		}
-		return new AttachmentDetails(id, size, lastModified, isImg, writable, perms);
+		return new AttachmentDetails(id, size, lastModified, isImg, writable, perms, file, mtime);
 	}
 
 	public AttachmentInfo getAttachmentInfo(String fileId) throws DokuException{
